--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ matplotlib==3.2.1
 numpy==1.18.5
 scipy==1.4.1    
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.2.0+cpu
-torchvision==0.5.0+cpu
+torch===1.4.0 
+torchvision===0.5.0
+#torch==1.2.0+cpu
+#torchvision==0.5.0+cpu
